# yasuda-seminar-2021

./: README.md  pyproject.toml  test.ipynb
quantitative_economics_with_python/: 10_dynamics_in_one_dimension.ipynb  12_finite_markov_chains.ipynb  14_linear_state_space_models.ipynb  1_geometric_series_for_elementary_economics.ipynb  28_cake_eating_i_introduction_to_optimal_saving.ipynb  2_multivariate_hypergeometric_distribution.ipynb  3_modeling_covid_19.ipynb  4_linear_algebra.ipynb
